--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/vivid64"
-  config.vm.network "forwarded_port", guest: 8888, host: 8888
-  # config.vm.synced_folder ".", "/home/vagrant/vagga", :mount_options => ["dmode=777","fmode=777"]
+  config.vm.network "forwarded_port", guest: 6379, host: 6379
+  config.vm.synced_folder ".", "/shared"#, :mount_options => ["dmode=777","fmode=777"]
 
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "2048"
@@ -16,5 +16,8 @@ Vagrant.configure(2) do |config|
     sudo add-apt-repository 'deb http://ubuntu.zerogw.com vagga-testing main'
     sudo apt-get update
     sudo apt-get install -y --force-yes vagga
+    if [ -f /shared/vagga.yaml ]; then
+      cp /shared/vagga.yaml /home/vagrant
+    fi
   SHELL
 end
