--- a/haskell/vagga.yaml
+++ b/haskell/vagga.yaml
@@ -23,6 +23,10 @@ commands:
     container: platform
     run: stack ghc
     description: Run GHC
+  stack: !Command
+    container: platform
+    run: [stack]
+    description: Run Stack
   sh: !Command
     container: platform
     run: bash
