--- a/scala/vagga.yaml
+++ b/scala/vagga.yaml
@@ -54,7 +54,7 @@ commands:
     description: Run sbt
   iscala: !Command
     container: iscala
-    run: ipython notebook --KernelManager.kernel_cmd="$KERNEL_PARAMS"
+    run: ipython notebook --ip='*' --KernelManager.kernel_cmd="$KERNEL_PARAMS"
     description: Run a scala notebook
   sh: !Command
     container: sbt
