--- a/django/vagga.yaml
+++ b/django/vagga.yaml
@@ -3,6 +3,7 @@ containers:
     setup:
     - !UbuntuRelease { version: 15.04 }
     - !UbuntuUniverse
+    - !Install [libjpeg-dev, zlib1g-dev]
     - !PipConfig
       dependencies: true
     - !Py3Requirements "requirements.txt"
@@ -20,8 +21,8 @@ commands:
   py: !Command
     container: django
     run: [python3]
-    description: Run django administration commands
+    description: Run Python
   sh: !Command
     container: django
     run: bash
-    description: Run a shell with django available
+    description: Run a shell with Django available
