--- a/nim/vagga.yaml
+++ b/nim/vagga.yaml
@@ -29,8 +29,7 @@ containers:
     - !Sh |
         git clone https://github.com/nim-lang/nimble.git
         cd nimble
-        git clone -b v0.13.0 --depth 1 https://github.com/nim-lang/nim vendor/nim
-        nim c -r src/nimble install
+        nim -d:release c -r src/nimble -y install
     - !Remove /work/nimble
     environ:
       PATH: "/work/.home/.nimble/bin:/opt/nim/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
